@startuml

title __SEARCH's Class Diagram__\n

  namespace com.example.procomsearch {
    namespace ui.Search {
      class com.example.procomsearch.ui.Search.SearchFragment {
          ~ autoInput : ImageButton
          {static} ~ firstTime : boolean
          ~ hintButton : ImageButton
          ~ keyBoard : ImageButton
          ~ listPopupWindow : ListPopupWindow
          ~ mDrawerLayout : DrawerLayout
          ~ root : View
          ~ toolbar : Toolbar
          {static} ~ typeOddTimes : boolean
          - progressBar : ProgressBar
          - rankAttribute : String
          - searchButton : Button
          - textList : ArrayList<String>
          - userId : int
          + onCreateView()
          + onResume()
          {static} + printCompanies()
          {static} - parseQuery()
          - search()
          - setMightBeInterest()
          - setQuickInput()
          - showListPopupWindow()
          - showPopupHint()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace ui.Search {
      class com.example.procomsearch.ui.Search.SearchViewModel {
          - mText : MutableLiveData<String>
          + SearchViewModel()
          + getText()
      }
    }
  }
  

  com.example.procomsearch.ui.Search.SearchFragment -up-|> androidx.fragment.app.Fragment
  com.example.procomsearch.ui.Search.SearchFragment o-- com.example.procomsearch.buttonEditText.ClearableEditText : searchBox
  com.example.procomsearch.ui.Search.SearchFragment o-- com.example.procomsearch.ui.Search.SearchViewModel : searchViewModel
  com.example.procomsearch.ui.Search.SearchViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
